Add create new seller
